<resources>
    <string name="app_name">Blood App</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="user_email">Email</string>

    <string name="name">Name</string>
    <string name="submit">submit</string>
    <string name="Again_Password">Again Password</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_accounts">Accounts</string>

    <string name="home_second">Home Second</string>
    <string name="sign_out">Sign out</string>
    <string name="create_new_account">Create new account</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile">profile</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="update">Update</string>
    <string name="reset">Reset</string>
    <string name="blood_group">Blood Group</string>

    <array name="bloodGroups">
        <item>Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </array>
    <string name="mobile_no">Mobile No.</string>
    <string name="_1234567890">1234567890</string>
    <string name="hello_gmail_com">hello@gmail.com</string>
    <string name="blood">Blood</string>
    <string name="copy_donar_id_from_home">Copy donar id from home</string>
    <string name="title_activity_find_donar">Map</string>

</resources>