<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.bloodapp.ui.auth.AuthViewModel" />
    </data>
    <RelativeLayout
        android:id="@+id/signupAct"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        tools:context=".ui.auth.SignupActivity">
        <TextView
            android:id="@+id/signup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/signup"
            android:textSize="30sp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:layout_centerHorizontal="true" />
        <LinearLayout
            android:id="@+id/signupBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/signup_title">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/signupImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/anonymous_profile"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/profile" />
            <EditText
                android:id="@+id/signupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.signUpName}"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/name"
                android:autofillHints="true"
                android:layout_marginTop="10dp"/>
            <Spinner
                android:id="@+id/signupBloodGroup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:entries="@array/bloodGroups"
                android:layout_marginTop="10dp" />
            <EditText
                android:id="@+id/signupMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.signUpMobile}"
                android:hint="@string/mobile_number"
                android:ems="10"
                android:inputType="phone"
                android:autofillHints="true"
                android:layout_marginTop="10dp" />
            <EditText
                android:id="@+id/signupEmail"
                android:text="@={viewModel.email}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/user_email"
                android:autofillHints="true"
                android:layout_marginTop="10dp" />
            <EditText
                android:id="@+id/signupPassAgain"
                android:text="@={viewModel.pass}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:autofillHints="true"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/login"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:text="@string/login"
            style="@style/signupBtn"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"/>
        <Button
            android:id="@+id/submit"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:onClick="@{viewModel::signUpBtn}"
            android:text="@string/submit"
            style="@style/loginBtn"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />
        <ProgressBar
            android:id="@+id/signupProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </RelativeLayout>
</layout>