<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.fragments.accounts.Accounts">
    <data>
        <variable
            name="accountViewModel"
            type="com.example.bloodapp.ui.home.fragments.accounts.AccountsViewModel" />
    </data>
    <RelativeLayout
        android:id="@+id/accountsFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">
        <LinearLayout
            android:id="@+id/signupBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/dummyuri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/name"
                android:autofillHints=""
                android:visibility="gone"
                tools:ignore="TextViewEdits" />
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/accountImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/anonymous_profile"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/profile" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/accountLabel1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"/>
                <EditText
                    android:id="@+id/accountName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={accountViewModel.accountName}"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/name"
                    android:autofillHints="true"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/accountLabel2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_group"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"/>
                <Spinner
                    android:id="@+id/accountBloodGroup"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:entries="@array/bloodGroups"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/accountLabel3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_no"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"/>
                <EditText
                    android:id="@+id/accountMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={accountViewModel.accountMobile}"
                    android:hint="@string/mobile_number"
                    android:ems="10"
                    android:inputType="phone"
                    android:autofillHints="true"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
            <EditText
                android:id="@+id/accountEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={accountViewModel.accountEmail}"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/user_email"
                android:autofillHints=""
                android:layout_marginTop="10dp"
                android:enabled="false" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/accountPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:autofillHints="true"
                    android:enabled="false"
                    android:layout_toStartOf="@+id/resetPass"/>
                <Button
                    android:id="@+id/resetPass"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/reset"
                    style="@style/resetBtn"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </LinearLayout>
        <Button
            android:id="@+id/updateAccount"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:onClick="@{accountViewModel::updateAccount}"
            android:text="@string/update"
            style="@style/loginBtn"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>
        <ProgressBar
            android:id="@+id/accountProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</layout>