<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="2dp"
    app:cardCornerRadius="15dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userListImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/anonymous_profile"
            android:contentDescription="@string/name"/>
        <TextView
            android:id="@+id/userListName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/userListImage"
            android:layout_toStartOf="@+id/userListBloodGroup"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/user_name"
            android:textSize="18sp"
            android:ellipsize="end"
            android:singleLine="true"
            android:textIsSelectable="false"/>
        <TextView
            android:id="@+id/userListMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/userListImage"
            android:layout_toStartOf="@+id/userListBloodGroup"
            android:layout_below="@+id/userListName"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/mobile_no"
            android:textSize="15sp"
            android:ellipsize="end"
            android:singleLine="true"
            android:textIsSelectable="false"/>
        <Button
            android:id="@+id/userListBloodGroup"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/blood"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/empty_blood_img"
            android:contentDescription="@string/user_name"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>