<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.bloodapp.ui.auth.AuthViewModel" />
    </data>
    <RelativeLayout
        android:id="@+id/loginAct"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginActivity">
        <ImageView
            android:id="@+id/loginFrontImg"
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/login_img" />
        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:text="@string/login"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/loginFrontImg" />
        <LinearLayout
            android:id="@+id/linearText"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_below="@+id/loginTitle"
            android:layout_margin="16dp">
            <EditText
                android:id="@+id/userEmail"
                android:text="@={viewModel.email}"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/user_email"
                android:autofillHints=""
                android:layout_marginTop="30dp"/>
            <EditText
                android:id="@+id/userPassword"
                android:text="@={viewModel.pass}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:autofillHints="false"
                android:layout_marginTop="30dp"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/linearText"
            android:layout_margin="16dp">
            <Button
                android:id="@+id/signupBtn"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                style="@style/signupBtn"
                android:layout_alignParentStart="true" />
            <Button
                android:id="@+id/loginBtn"
                android:onClick="@{viewModel::loginBtn}"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                style="@style/loginBtn"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <ProgressBar
            android:id="@+id/loginProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </RelativeLayout>
</layout>