<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/viewingDonarBloodGroup"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/blood"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/empty_blood_img"
            android:contentDescription="@string/user_name"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/viewingDonarCard1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:cardCornerRadius="15dp"
            style="@style/cardMargin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/viewingDonarImage"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/anonymous_profile"
                    android:contentDescription="@string/app_name"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/viewingDonarName"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="15dp"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:text="@string/user_name"
                    android:textSize="20sp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textIsSelectable="false" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/viewingImageContainer"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:visibility="gone"
            app:cardCornerRadius="15dp"
            style="@style/cardMargin">
            <ImageView
                android:id="@+id/viewingImage2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/anonymous_profile"
                android:contentDescription="@string/user_name"
                style="@style/cardMargin"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/viewingDonarCard2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            style="@style/cardMargin"
            app:cardCornerRadius="15dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/mobileLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/mobile_no"
                    android:textSize="15sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/viewingDonarMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/mobileLabel"
                    android:layout_toStartOf="@+id/viewingMessageDonar"
                    android:text="@string/_1234567890"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textIsSelectable="false" />
                <Button
                    android:id="@+id/viewingMessageDonar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/message_24"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/viewingCallDonar" />
                <Button
                    android:id="@+id/viewingCallDonar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/ic_phone"
                    android:contentDescription="@string/user_name"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/viewingDonarCard3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:cardCornerRadius="15dp"
            style="@style/cardMargin" >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/emailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_email"
                    android:textSize="15sp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15sp"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/viewingDonarEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/emailLabel"
                    android:layout_toStartOf="@+id/emailDonar"
                    android:text="@string/hello_gmail_com"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textIsSelectable="false" />
                <Button
                    android:id="@+id/emailDonar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/email_donar"
                    android:contentDescription="@string/user_name"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>